--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,10 @@
   </head>
   <body>
     <div id="bonkStatus">
+      <h1 id="bonkStatusMessage"></h1>
       <image class="doBonk" src="bonk.gif"></image>
       <image class="noBonk" src="no-bonk.png"></image>
-      <h3 id="message"></h3>
+      <h3 id="timerMessage"></h3>
     </div>
     <script>
       const DAY_IN_MS = 24 * 60 * 60 * 1000;
@@ -39,8 +40,15 @@
       let { doBonk, nextBonk } = consumeBonk();
       document.getElementById("bonkStatus").toggleAttribute("bonk", doBonk);
 
-      let messageEl = document.getElementById("message");
-      messageEl.innerText = `Come back for your next BONK tomorrow at ${new Date(
+      let bonkStatusMessageEl = document.getElementById("bonkStatusMessage");
+      if (doBonk) {
+        bonkStatusMessageEl.textContent = "BONK!";
+      } else {
+        bonkStatusMessageEl.textContent = "Sorry, out of BONKs.";
+      }
+
+      let timerMessageEl = document.getElementById("timerMessage");
+      timerMessageEl.innerText = `Come back for your next BONK tomorrow at ${new Date(
         nextBonk
       ).toLocaleTimeString([], { hour: "2-digit", minute: "2-digit" })}`;
     </script>
