--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,12 @@
     <script>
       const DAY_IN_MS = 24 * 60 * 60 * 1000;
 
+      // Reset easter egg, if more bonks are needed.
+      window.is = () => {
+        localStorage.removeItem("lastBonk");
+        location.reload();
+      };
+
       function consumeBonk() {
         let lastBonkStr = localStorage.getItem("lastBonk");
         let nextBonk = Date.now();
@@ -51,6 +57,11 @@
       timerMessageEl.innerText = `Come back for your next BONK tomorrow at ${new Date(
         nextBonk
       ).toLocaleTimeString([], { hour: "2-digit", minute: "2-digit" })}`;
+    </script>
+    <script>
+      console.info(
+        "Thanks for the inspiration, R.\nMaybe there is() a way to bypass this limit..."
+      );
     </script>
   </body>
 </html>
