Switch relative time label to use DayJS

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
       <h3 id="timerMessage"></h3>
       <a id="linkTryAgain" href="#">Request new BONK</a>
     </div>
+    <script src="/dayjs/dayjs.min.js"></script>
+    <script src="/dayjs/relativeTime.min.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
