Updated layout to prevent shifting during load.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
   <body>
     <div id="app">
       <div id="bonkStatus">
-        <h1 id="bonkStatusMessage"></h1>
-        <image class="doBonk" src="bonk.gif"></image>
-        <image class="noBonk" src="no-bonk.png"></image>
+        <h1 id="bonkStatusMessage">Loading BONK</h1>
+        <image class="doBonk" src="bonk.gif" height="200" width="200"></image>
+        <image
+          class="noBonk"
+          src="no-bonk.png"
+          height="200"
+          width="200"
+        ></image>
         <h3 id="timerMessage"></h3>
         <a id="linkTryAgain" href="#">Request new BONK</a>
       </div>
