--- a/index.html
+++ b/index.html
@@ -10,14 +10,21 @@
     <div id="app">
       <div id="bonkStatus">
         <h1 id="bonkStatusMessage">Loading BONK</h1>
-        <image class="doBonk" src="bonk.gif" height="200" width="200"></image>
+        <image
+          class="doBonk"
+          src="bonk.gif"
+          height="200"
+          width="200"
+          alt="Go to Horny Jail meme animation"
+        ></image>
         <image
           class="noBonk"
           src="no-bonk.png"
           height="200"
           width="200"
+          alt="Shiba Inu dog sleeping in a bed covered by a blanket"
         ></image>
-        <h3 id="timerMessage"></h3>
+        <h2 id="timerMessage"></h3>
         <a id="linkTryAgain" href="#">Request new BONK</a>
       </div>
     </div>
